<resources>
    <string name="app_name">KotlinLiveDataViewModalAuth</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username/Email</string>
    <string name="prompt_password">******</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Username is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
